--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,57 +1,31 @@
-//{
-//  "compilerOptions": {
-//    "module": "commonjs",
-//    "jsx": "react",
-//    "declaration": true,
-//    "removeComments": true,
-//    "emitDecoratorMetadata": true,
-//    "experimentalDecorators": true,
-//    "allowSyntheticDefaultImports": true,
-//    "target": "es2017",
-//    "sourceMap": true,
-//    "outDir": "./dist",
-//    "baseUrl": "./",
-//    "incremental": true
-//  }
-//}
 {
-  "compilerOptions": {
+   "compilerOptions": {
     "target": "esnext",
     "module": "esnext",
-    "jsx": "preserve",
-    "strict": true,
-    "pretty": true,
-    "noImplicitAny": true,
-    "alwaysStrict": true,
-    "noImplicitReturns": true,
-    "noImplicitThis": true,
-    "outDir": ".next",
     "moduleResolution": "node",
-    "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true,
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
-    "sourceMap": true,
-    "skipLibCheck": true,
+    "jsx": "preserve",
+     "strictPropertyInitialization": false,
     "lib": [
-      "es2017",
-      "dom"
+      "dom",
+      "dom.iterable",
+      "esnext"
     ],
-    "baseUrl": ".",
-    "typeRoots": [
-      "node_modules/@types",
-      "./typings"
-    ],
-    "allowJs": true,
-    "forceConsistentCasingInFileNames": true,
+    "strict": true,
     "noEmit": true,
+    "allowJs": true,
+    "skipLibCheck": true,
+    "esModuleInterop": true,
+    "isolatedModules": true,
     "resolveJsonModule": true,
-    "isolatedModules": true
+    "forceConsistentCasingInFileNames": true,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "incremental": true
   },
   "include": [
-    "./pages/**/*",
-    "./src/**/*",
-    "./ui/**/*"
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx"
   ],
   "exclude": [
     "node_modules"
