--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,21 +1,11 @@
-//{
-//  "extends": "./tsconfig.json",
-//  "exclude": ["node_modules", "test", "dist", "**/*spec.ts"]
-//}
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "outDir": ".next/production-server",
-    "declaration": true,
-    "target": "es6",
     "module": "commonjs",
-    "moduleResolution": "node",
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
-    "isolatedModules": false,
     "noEmit": false,
-    "allowJs": false
+    "outDir": ".next/production-server"
   },
-  "include": ["./src/**/*"],
-  "exclude": ["node_modules"]
+  "include": [
+    "server"
+  ]
 }
