--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "dev": "ts-node --project tsconfig.build.json server/main.ts",
     "build": "next build && tsc --project tsconfig.build.json",
-    "start": "cross-env NODE_ENV=production node .next/production-server/main.js"
+    "start": "cross-env NODE_ENV=production node .next/production-server/main.js",
+    "format": "prettier --write \"server/**/*.ts\" \"pages/**/*.tsx\" \"components/**/*.tsx\""
   },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
@@ -23,7 +24,6 @@
     "bcrypt": "^5.0.0",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
-    "husky": "^4.3.0",
     "mongodb": "^3.6.2",
     "nest-next": "^9.2.0",
     "next": "^9.5.5",
