implement login functionality

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node --project tsconfig.build.json server/main.ts",
+    "dev": "ts-node-dev --project tsconfig.build.json server/main.ts",
     "build": "next build && tsc --project tsconfig.build.json",
     "start": "cross-env NODE_ENV=production node .next/production-server/main.js",
     "format": "prettier --write \"server/**/*.ts\" \"pages/**/*.tsx\" \"components/**/*.tsx\""
@@ -16,11 +16,14 @@
     "@material-ui/icons": "^4.9.1",
     "@nestjs/common": "^7.0.0",
     "@nestjs/core": "^7.0.0",
+    "@nestjs/jwt": "^7.1.0",
+    "@nestjs/passport": "^7.1.0",
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/typeorm": "^7.1.4",
     "@nestpress/next": "^1.2.3",
     "@types/bcrypt": "^3.0.0",
     "@types/mongodb": "^3.5.27",
+    "axios": "^0.20.0",
     "bcrypt": "^5.0.0",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
@@ -28,6 +31,8 @@
     "nest-next": "^9.2.0",
     "next": "^9.5.5",
     "next-cookies": "^2.0.3",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "pg": "^8.4.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -58,6 +63,7 @@
     "ts-jest": "26.2.0",
     "ts-loader": "^6.2.1",
     "ts-node": "9.0.0",
+    "ts-node-dev": "^1.0.0-pre.63",
     "tsconfig-paths": "^3.9.0",
     "typescript": "3.8.3"
   }
