--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "bcrypt": "^5.0.0",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
+    "firebase": "^7.23.0",
+    "firebase-admin": "^9.2.0",
     "isomorphic-unfetch": "^3.1.0",
     "mongodb": "^3.6.2",
     "next": "^9.5.5",
@@ -47,6 +49,7 @@
     "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^7.0.0",
     "@types/express": "^4.17.3",
+    "@types/firebase": "^3.2.1",
     "@types/jest": "26.0.10",
     "@types/node": "^13.9.1",
     "@types/react": "^16.9.51",
