--- a/package.json
+++ b/package.json
@@ -38,9 +38,11 @@
     "pg": "^8.4.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-window": "^1.8.5",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.5.4",
+    "rxjs": "^6.6.3",
+    "rxjs-compat": "^6.6.3",
     "typeorm": "^0.2.28",
     "uuid": "^8.3.1"
   },
