--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@types/jest": "26.0.10",
     "@types/node": "^13.9.1",
     "@types/react": "^16.9.51",
+    "@types/react-window": "^1.8.2",
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "3.9.1",
     "@typescript-eslint/parser": "3.9.1",
